<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cflib</depend>
  <exec_depend>math</exec_depend>

  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>numpy</depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>socket</exec_depend>
  <exec_depend>struct</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>queue</exec_depend>
  <exec_depend>time</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
